--- a/sponge_bob_front_end/style.css
+++ b/sponge_bob_front_end/style.css
@@ -3,3 +3,8 @@ canvas {
     background-color: lightblue;
     background: url('assets/images/setting.jpg')
 }
+
+.you_lost{
+    width: 70px;
+    height: 70px;
+}
