Add page styling

--- a/sponge_bob_front_end/style.css
+++ b/sponge_bob_front_end/style.css
@@ -1,10 +1,86 @@
 canvas {
-    border:1px solid lightblue;
+    border:10px ridge #FFF56C;;
     background-color: lightblue;
-    background: url('assets/images/setting.jpg')
+    background: url('assets/images/setting.jpg');
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    display: block;
+    width: 800px;
 }
 
-.you_lost{
-    width: 70px;
-    height: 70px;
+body {
+  background-color: #0457A0;
+}
+
+#you_lost {
+  display:inline-block;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.lost_pic{
+  width:10%;
+  height:10%;
+}
+
+#lost_text{
+  color:#FFF56C;
+  font-family: Slackey;
+  font-size: 50px;
+}
+
+#title{
+  color:white;
+  background-color: orange;
+  font-size: 18px;
+  font-style: bold;
+}
+
+.toolbar{
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #C62F24;
+  font-family: 'Baloo Bhaina'
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px 5px 10px 5px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #FFF56C;
+  color: #26B9C8;
+}
+
+#title:hover {
+background-color:white;
+color:orange;
+}
+
+#button{
+  background:purple;
+  color:white;
+  border-radius: 10px;
+  font-size: 15px;
+  width:100px;
 }
