additional css updates

--- a/sponge_bob_front_end/style.css
+++ b/sponge_bob_front_end/style.css
@@ -52,7 +52,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #C62F24;
-  font-family: 'Baloo Bhaina'
+  font-family: 'Baloo Bhaina';
 }
 
 li {
