Added the button functionality

--- a/sponge_bob_front_end/style.css
+++ b/sponge_bob_front_end/style.css
@@ -16,7 +16,7 @@ body {
 #you_lost {
   display:inline-block;
   align-items: center;
-  display: flex;
+  display: none;
   justify-content: center;
 }
 .lost_pic{
